fix collection image layout issue

--- a/src/styles/model.css
+++ b/src/styles/model.css
@@ -1,18 +1,18 @@
 .image-model {
-    width: 90%;
-    background: white;
-    height: auto;
-    position:fixed;
-    top: 5%;
-    left: 5%;
-    z-index: 10;
-    overflow-y: auto;  
-    animation: opa .1s ease-out forwards
-  }
+  width: 90%;
+  background: white;
+  height: auto;
+  position: fixed;
+  top: 5%;
+  left: 5%;
+  z-index: 10;
+  overflow-y: auto;
+  animation: opa 0.1s ease-out forwards;
+}
 
 @keyframes opa {
   from {
-    transform: scale(.8);
+    transform: scale(0.8);
     opacity: 0;
   }
   to {
@@ -55,7 +55,7 @@
 
 .cardHeader .user h3 {
   font-weight: 500;
-  font-size: .5rem;
+  font-size: 0.5rem;
   margin-top: 10px;
 }
 
@@ -75,10 +75,10 @@
   width: 300px;
   margin: auto;
   display: block;
-  height:fit-content;
+  height: fit-content;
 }
 
-.card-body  img {
+.card-body img {
   width: 100%;
   object-fit: contain;
   height: auto;
@@ -108,7 +108,7 @@
 }
 
 .heart {
-  font-size:1rem;
+  font-size: 1rem;
 }
 
 .skeleton {
@@ -118,16 +118,16 @@
 }
 
 button {
-  border:1px solid rgb(155, 153, 153);
+  border: 1px solid rgb(155, 153, 153);
   outline: none;
   background: transparent;
   height: 30px;
-  font-size: .5rem !important;
-  padding : 0rem .6rem;
+  font-size: 0.5rem !important;
+  padding: 0rem 0.6rem;
   border-radius: 3px;
-  opacity: .7;
+  opacity: 0.7;
   cursor: pointer;
-  color:black;
+  color: black;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -139,36 +139,31 @@ button:hover {
 .image-info {
   display: flex;
   align-items: center;
-  justify-content:space-around;
+  justify-content: space-around;
   padding: 1rem 0;
-  
 }
 
 .image-info .row:nth-child(1) {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: space-between;
+  width: 200px;
 }
-
-/* .image-info .col {
-  margin: 1rem 0 0 3rem;
-} */
 
 .image-info .col p:nth-child(1) {
   color: grey;
 }
 
-.image-info .col p:nth-child(2) { 
+.image-info .col p:nth-child(2) {
   color: rgb(17, 16, 16);
   font-size: 1rem;
-  margin-top: .3rem;
+  margin-top: 0.3rem;
 }
 
 .image-info .row:nth-child(2) button {
-  font-size: .9rem;
+  font-size: 0.9rem;
   display: inline;
 }
-
 
 .collection-heading {
   margin-left: 1rem;
@@ -177,8 +172,8 @@ button:hover {
   font-size: 1.2rem;
 }
 
-
-.title , .subtitle {
+.title,
+.subtitle {
   margin-left: 1.5rem;
   font-size: 1rem;
 }
@@ -186,48 +181,62 @@ button:hover {
   color: grey;
 }
 
-@media screen and (min-width : 40em) {
+.collection-card {
+  width: 100%;
+  color : #000;
+  text-decoration: none;
+}
+
+@media screen and (min-width: 40em) {
   .collections {
     display: flex;
     align-items: center;
     justify-content: space-around;
     width: 100%;
+    height: auto;
     margin-top: 1rem;
-    overflow:hidden;
+    overflow: hidden;
   }
+
+  
+.collection-card {
+  width: 500px;
+  color : #000;
+  text-decoration: none;
+}
 
   .cardHeader .user h3 {
     font-weight: 500;
     font-size: 1rem;
     margin-top: 10px;
   }
-  
+
   .cardHeader .user p {
     font-weight: normal;
     font-size: 0.7rem;
     color: rgb(104, 102, 102);
     margin-top: 5px;
   }
-  
+
   .image-model {
     width: 90%;
     background: white;
     height: auto;
-    position:fixed;
+    position: fixed;
     top: 5%;
     left: 5%;
     z-index: 10;
-    overflow-y: auto;  
-    animation: opa .1s ease-out forwards
+    overflow-y: auto;
+    animation: opa 0.1s ease-out forwards;
   }
   .card-body .image-wrapper {
     width: 500px;
     margin: auto;
     display: block;
-    height:fit-content;
+    height: fit-content;
   }
-  
-  .card-body  img {
+
+  .card-body img {
     width: 100%;
     object-fit: contain;
     height: auto;
@@ -236,41 +245,38 @@ button:hover {
   .image-info {
     display: flex;
     align-items: center;
-    justify-content:space-between;
+    justify-content: space-between;
     padding: 1rem 3rem;
   }
 
   button {
-    border:1px solid rgb(63, 63, 63);
+    border: 1px solid rgb(63, 63, 63);
     outline: none;
     background: transparent;
     height: 40px;
-    padding : 0rem .6rem;
+    padding: 0rem 0.6rem;
     height: 30px;
     border-radius: 3px;
-    opacity: .7;
+    opacity: 0.7;
     cursor: pointer;
-    color:black;
+    color: black;
     font-size: 1rem !important;
     font-family: Arial, Helvetica, sans-serif;
   }
-  
+
   button:hover {
     opacity: 1;
     color: rgb(29, 28, 28);
   }
-  
-  
-.close {
-  position: absolute;
-  top: 38%;
-  right: 1%;
-  color: rgb(61, 61, 61);
-  font-size: 1.5rem;
-  cursor: pointer;
-  z-index: 3;
-  opacity: 1;
-}
 
-  
+  .close {
+    position: absolute;
+    top: 38%;
+    right: 1%;
+    color: rgb(61, 61, 61);
+    font-size: 1.5rem;
+    cursor: pointer;
+    z-index: 3;
+    opacity: 1;
+  }
 }
